TODO: anyevent strict checking for $_ changes?

5.31  Sun Jan 23 11:49:19 CET 2011
	- work around a POE bug where POE would first poll for new events and
          invoke handlers BEFORE handling the message queue.
	- fix parsing of "domain" statement in resolv.conf (Johannes Plunien).
	- stop_read now does just that in TLS mode. see its
          documentation for caveats.
	- update to common::sense 3.4 warning set.
        - AE::Handle had a broken rbuf_max method and missing wbuf_max method.
        - new experimental AE::Handle::resettls method.

5.3    Fri Dec 31 05:48:13 CET 2010
	- major IOAsync patch by Paul Evans - 0.33 is required, as the major
          issues with IO::Async have been solved in that version, including
          the availabilty of a default loop!
	- implement new wbuf_max parameter for AnyEvent::Handle.
        - added Cocoa::EventLoop backend by Daisuke Murase.
        - the default testsuite now honors PERL_ANYEVENT_MODEL (Paul Evans).
        - clarify handle on_prepare documentation.
	- set CLOEXEC flag on parent-side fd's in AnyEvent::Util::run_cmd,
          to avoid leaking them to any child processes.
        - try to force files into the arch-dependend lib directory, for the
          half-"turly obsessive compulsive person"(s) that depend on it.

5.29   Sun Dec  5 10:49:21 CET 2010
        - convert EV backend to EV 4.00 API (so better upgrade EV too).
        - AE::Handle: implement dynamic read_size adjustment, add
          max_read_size parameter, reduce default read_size to 2048.
        - add some FAQ entries for servers and/or on_eof vs. on_error.
	- work around OS bugs (cygwin again) when lingering in AE::Handle.
        - reduce memory usage slightly when connect was used in AE::Handle.
        - wrok around more segfaults in Tk.
        - document tls_ctx => undef as valid.
        - detect WNOHANG value at compiletime.
        - include some probably linux-only support for building AnyEvent